--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I am Priyansh</title>
     <link rel="shortcut icon" type="image/png" href="images/Priyansh-modified.png">
-    <link rel="stylesheet" type="text/css" href="css/form.css">
+    <link rel="stylesheet" type="text/css" href="form.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body id="priyansh">
     <main>
       <nav class="navbar">
         <a class="navbar-brand" href="#">
@@ -26,11 +26,59 @@
         </ul>
       </nav>
       <br>
-      <h1>Hi, I am Priyansh</h1>
+      <h1>Hi, I am  Priyansh</h1>
       <h2>I am a Front-End Web Developer and a SQL Developer</h2>
       <div class="button-adjust">
-        <a class="button" href="#">About Me</a><a class="button-2" href="#">My Full Resume View</a>
+        <a class="button" href="#">About Me</a><a class="button-2" href="#section-1">Education</a>
       </div>
     </main>
+    <section id="section-1" class="section-1">
+        <img src="images/education.png" alt="EDU" class="img-1">
+        <h1 class="h1-edu">Education</h1>
+        <h2 class="h2-bca">Bachelor of Computer Applications (2021-2024)</h2>
+        <p class="p-college">Mangalmay Institute of Manegement and Technology - Greater Noida, Uttar Pradesh</p>
+        <a href="#section-2" class="button-3">Skills</a>
+      </section>
+      <section class="section-2" id="section-2">
+        <img src="images/skills.png" alt="skill icon" class="img-2">
+        <h1 class="h1-skills">Skills</h1>
+        <h2 class="h2-skills">Programming</h2>
+        <p class="p-skills">HTML5 | CSS3 | SQL | Python</p>
+        <br>
+        <h2 class="h2-skills">Frameworks</h2>
+        <p class="p-skills">Tailwind CSS | Bootstrap</p>
+        <br>
+        <h2 class="h2-skills">Softwares</h2>
+        <p class="p-skills">MySQL | VS Code | Gitpod.io | Sublime text | Figma | Adobe lightroom</p>
+        <br>
+        <h2 class="h2-skills">Others</h2>
+        <p class="p-skills">UI/UX</p>
+        <a href="#section-3" class="button-4">Personal Prjects</a>
+      </section>
+      <section class="section-3" id="section-3">
+        <img src="images/projects.png" alt="project icon" class="img-3">
+        <h1 class="h1-projects">Projects</h1>
+        <h2 class="h2-projects">Airlines database:</h2>
+        <p class="p-projects">- Created a database for Airlines Reservation System.</p>
+        <p class="p-projects">- Softwares used: MySQL</p>
+        <br>
+        <h2 class="h2-projects">Students database:</h2>
+        <p class="p-projects">- Created a database for credentials of students.</p>
+        <p class="p-projects">- Softwares used: MySQL</p>
+        <a href="#section-4" class="button-5">Certifications \/</a>
+      </section>
+      <section class="section-4" id="section-4">
+        <h1 class="h1-certify">Certfications</h1>
+        <img src="images/certificate.png" alt="certify icon" class="img-4">
+        <h2 class="h2-certify">Certification in Front-End Web Development</h2>
+        <p class="p-certify">HTML5 | CSS3</p>
+        <br>
+        <h2 class="h2-certify">Certification in SQL Development</h2>
+        <p class="p-certify">MySQL | Advanced MySQL</p>
+        <br>
+        <h2 class="h2-certify">Certification in UI/UX Development</h2>
+        <p class="p-certify">UI/UX</p>
+        <a href="#priyansh" class="button-6">Go up /\</a>
+      </section>
   </body>
 </html>
